[package]
name = "solana-money-market"
version = "1.0.0"
edition = "2018"

[features]
no-entrypoint = []

[dependencies]
solana-program = "1.7.7"
moneymarket = { path = "../packages/moneymarket", default-features = false, version = "0.1.0"}
moneymarket-market = { path="../contracts/market" }

[dev-dependencies]
solana-program-test = "1.7.7"
solana-sdk = "1.7.7"

[lib]
crate-type = ["cdylib", "lib"]

